# hospital-management-api

./: .env  .gitignore  idea.txt  main.py  pyproject.toml
auth/: auth_handler.py  auth_role.py  hashing.py  token.py
data/: appointment_data.py  doctor_data.py  init.py  patient_data.py  staff_data.py  user_data.py
model/: appointment_model.py  auth_user_model.py  doctor_model.py  login_model.py  patient_model.py  staff_model.py  user_model.py
service/: appointment_service.py  auth_service.py  doctor_service.py  patient_service.py  staff_service.py  user_service.py
testing/: hashing.py  jwt.py
web/: appointment_web.py  auth_web.py  doctor_web.py  patient_web.py  staff_web.py  user_web.py
